Add Damee integration, OpenAI/Gemeni API, and agentic tools
Introduces Damee service integration, OpenAI-compatible API endpoints, and agentic tool server controllers. Adds new DTOs for OpenAI and tool server operations, implements confirmation workflows, and enhances chunking, memory, and metrics services. Updates documentation and configuration to reflect new modules and production readiness. Includes new database migrations, frontend service catalog component, and Python tools for knowledge search and incident management.